added changes according to frontend requirments