@@ -1,17 +1,18 @@
 package greencity.service.ubs;
 
-import greencity.dto.pageble.PageableDto;
 import greencity.dto.useragreement.UserAgreementDetailDto;
 import greencity.dto.useragreement.UserAgreementDto;
 import greencity.entity.user.UserAgreement;
+import greencity.entity.user.employee.Employee;
 import greencity.exceptions.NotFoundException;
+import greencity.repository.EmployeeRepository;
 import greencity.repository.UserAgreementRepository;
 import lombok.AllArgsConstructor;
 import org.modelmapper.ModelMapper;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import java.util.List;
+import java.util.stream.Collectors;
+import static greencity.constant.ErrorMessage.EMPLOYEE_NOT_FOUND_BY_EMAIL;
 import static greencity.constant.ErrorMessage.USER_AGREEMENT_NOT_FOUND_BY_ID;
 
 /**
@@ -20,25 +21,19 @@ import static greencity.constant.ErrorMessage.USER_AGREEMENT_NOT_FOUND_BY_ID;
 @Service
 @AllArgsConstructor
 public class UserAgreementServiceImpl implements UserAgreementService {
-    private final UserAgreementRepository repository;
+    private final EmployeeRepository employeeRepository;
+    private final UserAgreementRepository userAgreementrepository;
     private final ModelMapper modelMapper;
 
     /**
      * {@inheritDoc}
      */
     @Override
-    public PageableDto<UserAgreementDetailDto> findAll(Pageable pageable) {
-        Page<UserAgreement> page = repository.findAll(pageable);
-
-        List<UserAgreementDetailDto> agreements = page.getContent().stream()
-            .map(userAgreement -> modelMapper.map(userAgreement, UserAgreementDetailDto.class))
-            .toList();
-
-        return new PageableDto<>(
-            agreements,
-            page.getTotalElements(),
-            page.getNumber(),
-            page.getSize());
+    public List<Long> findAllIdSortedByAsc() {
+        List<UserAgreement> agreements = userAgreementrepository.findAllSortedByAsc();
+        return agreements.stream()
+            .map(UserAgreement::getId)
+            .collect(Collectors.toList());
     }
 
     /**
@@ -46,7 +41,7 @@ public class UserAgreementServiceImpl implements UserAgreementService {
      */
     @Override
     public UserAgreementDto findLatest() {
-        UserAgreement latest = repository.findLatestAgreement()
+        UserAgreement latest = userAgreementrepository.findLatestAgreement()
             .orElseThrow(() -> new NotFoundException("No user agreement found"));
         return modelMapper.map(latest, UserAgreementDto.class);
     }
@@ -55,9 +50,12 @@ public class UserAgreementServiceImpl implements UserAgreementService {
      * {@inheritDoc}
      */
     @Override
-    public UserAgreementDetailDto create(UserAgreementDto userAgreementDto) {
+    public UserAgreementDetailDto create(UserAgreementDto userAgreementDto, String authorEmail) {
         UserAgreement userAgreement = modelMapper.map(userAgreementDto, UserAgreement.class);
-        UserAgreement saved = repository.save(userAgreement);
+        Employee employee = findEmployeeByEmail(authorEmail);
+        userAgreement.setAuthor(employee);
+
+        UserAgreement saved = userAgreementrepository.save(userAgreement);
         return modelMapper.map(saved, UserAgreementDetailDto.class);
     }
 
@@ -74,27 +72,18 @@ public class UserAgreementServiceImpl implements UserAgreementService {
      * {@inheritDoc}
      */
     @Override
-    public UserAgreementDetailDto update(Long id, UserAgreementDto userAgreementDto) {
-        UserAgreement existingAgreement = findEntity(id);
-
-        existingAgreement.setTextUa(userAgreementDto.getTextUa());
-        existingAgreement.setTextEn(userAgreementDto.getTextEn());
-
-        UserAgreement updatedAgreement = repository.save(existingAgreement);
-        return modelMapper.map(updatedAgreement, UserAgreementDetailDto.class);
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @Override
     public void delete(Long id) {
         findEntity(id);
-        repository.deleteById(id);
+        userAgreementrepository.deleteById(id);
     }
 
     private UserAgreement findEntity(Long id) {
-        return repository.findById(id)
+        return userAgreementrepository.findById(id)
             .orElseThrow(() -> new NotFoundException(String.format(USER_AGREEMENT_NOT_FOUND_BY_ID, id)));
+    }
+
+    private Employee findEmployeeByEmail(String email) {
+        return employeeRepository.findByEmail(email)
+            .orElseThrow(() -> new NotFoundException(EMPLOYEE_NOT_FOUND_BY_EMAIL));
     }
 }
